package Interfaces;

public interface NavegadorNaInternet{
	
	public void exibirPagina(String url);
	public void adicionarNovaAba();
	public void atualizarPagina();

}
